--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
+*.Cache
 *.old
 *.suo
 *.user
