A restructure to make the code a bit clearer.

--- a/MySQLTuner/MySqlTuner .Net 2.0.csproj
+++ b/MySQLTuner/MySqlTuner .Net 2.0.csproj
@@ -112,6 +112,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="MySqlServer.cs" />
+    <Compile Include="TuningCalculator.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <EmbeddedResource Include="FormLogOn.resx">
       <DependentUpon>FormLogOn.cs</DependentUpon>
     </EmbeddedResource>
