Upgraded MySQL Connector to 6.9.7 Removed old Nuget Package Restore Added NuGet Automatic Package Restore Removed Old TFS Components Removed Custom Code Analysis Rules Fixed Code Analysis Issues Visual Studio 2015 Support

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,10 @@
 *.old
 *.suo
 *.user
+.vs
 /MySQLTuner/bin
 /MySQLTuner/obj
 /MySqlTuner Test Cases/bin
 /MySqlTuner Test Cases/obj
 /packages
+Thumbs.db
