Solution restructure and update to 2017

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 .vs
 /MySQLTuner/bin
 /MySQLTuner/obj
+/MySQLTuner .Net 2.0/bin
+/MySQLTuner .Net 2.0/obj
 /MySqlTuner Test Cases/bin
 /MySqlTuner Test Cases/obj
 /packages
