--- a/MySQLTuner .Net 2.0/MySqlTuner .Net 2.0.csproj
+++ b/MySQLTuner .Net 2.0/MySqlTuner .Net 2.0.csproj
@@ -47,6 +47,7 @@
     <DocumentationFile>bin\Debug\MySqlTuner.xml</DocumentationFile>
     <CodeAnalysisRuleSet>
     </CodeAnalysisRuleSet>
+    <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -64,16 +65,13 @@
     <StartupObject>MySqlTuner.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Resources\App.ico</ApplicationIcon>
+    <ApplicationIcon>..\MySQLTuner\Resources\App.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>MySqlTuner.snk</AssemblyOriginatorKeyFile>
-  </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationManifest>Resources\App.manifest</ApplicationManifest>
+    <AssemblyOriginatorKeyFile>..\MySQLTuner\MySqlTuner.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualBasic" />
@@ -88,59 +86,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormLogOn.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormLogOn.Designer.cs">
-      <DependentUpon>FormLogOn.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormMain.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMain.Designer.cs">
-      <DependentUpon>FormMain.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="NativeMethods.cs" />
-    <Compile Include="Settings.cs" />
-    <Compile Include="Status.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="MySqlServer.cs" />
-    <Compile Include="TuningCalculator.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <EmbeddedResource Include="FormLogOn.resx">
-      <DependentUpon>FormLogOn.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMain.resx">
-      <DependentUpon>FormMain.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <None Include="app.config" />
-    <None Include="Class Diagram.cd" />
-    <None Include="MySqlTuner.snk" />
-    <EmbeddedResource Include="Resources\App.manifest">
+    <None Include="..\MySQLTuner\Class Diagram.cd">
+      <Link>Class Diagram.cd</Link>
+    </None>
+    <None Include="..\MySQLTuner\MySqlTuner.snk">
+      <Link>MySqlTuner.snk</Link>
+    </None>
+    <EmbeddedResource Include="..\MySQLTuner\Resources\App.manifest">
+      <Link>App.manifest</Link>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <None Include="..\MySQLTuner\Settings.StyleCop">
+      <Link>Settings.StyleCop</Link>
+    </None>
+    <None Include="app.config" />
     <None Include="packages.config" />
-    <None Include="Settings.StyleCop" />
-  </ItemGroup>
-  <ItemGroup>
-    <CodeAnalysisDictionary Include="CustomDictionary.xml" />
-    <Content Include="Resources\App.ico" />
-    <Content Include="Resources\Info.png" />
-    <None Include="Resources\Recommendation.png" />
-    <None Include="Resources\Fail.png" />
-    <None Include="Resources\Pass.png" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
@@ -163,6 +123,73 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="..\MySQLTuner\FormLogOn.cs">
+      <Link>FormLogOn.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\MySQLTuner\FormLogOn.designer.cs">
+      <Link>FormLogOn.designer.cs</Link>
+      <DependentUpon>FormLogOn.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MySQLTuner\FormMain.cs">
+      <Link>FormMain.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\MySQLTuner\FormMain.designer.cs">
+      <Link>FormMain.designer.cs</Link>
+      <DependentUpon>FormMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MySQLTuner\GlobalSuppressions.cs">
+      <Link>GlobalSuppressions.cs</Link>
+    </Compile>
+    <Compile Include="..\MySQLTuner\MySqlServer.cs">
+      <Link>MySqlServer.cs</Link>
+    </Compile>
+    <Compile Include="..\MySQLTuner\NativeMethods.cs">
+      <Link>NativeMethods.cs</Link>
+    </Compile>
+    <Compile Include="..\MySQLTuner\Program.cs">
+      <Link>Program.cs</Link>
+    </Compile>
+    <Compile Include="..\MySQLTuner\Properties\AssemblyInfo.cs">
+      <Link>Properties\AssemblyInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\MySQLTuner\Settings.cs">
+      <Link>Settings.cs</Link>
+    </Compile>
+    <Compile Include="..\MySQLTuner\Status.cs">
+      <Link>Status.cs</Link>
+    </Compile>
+    <Compile Include="..\MySQLTuner\TuningCalculator.cs">
+      <Link>TuningCalculator.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\MySQLTuner\Properties\Resources.Designer.cs">
+      <Link>Properties\Resources.designer.cs</Link>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="..\MySQLTuner\FormLogOn.resx">
+      <Link>FormLogOn.resx</Link>
+      <DependentUpon>FormLogOn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\MySQLTuner\FormMain.resx">
+      <Link>FormMain.resx</Link>
+      <DependentUpon>FormMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\MySQLTuner\Properties\Resources.resx">
+      <Link>Properties\Resources.resx</Link>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\MySQLTuner\CustomDictionary.xml">
+      <Link>CustomDictionary.xml</Link>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
