--- a/MySQLTuner/packages.config
+++ b/MySQLTuner/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MySql.Data" version="6.9.9" targetFramework="net40-client" />
+  <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net40-client" developmentDependency="true" />
 </packages>
