--- a/MySqlTuner Test Cases/MySqlTuner Test Cases.csproj
+++ b/MySqlTuner Test Cases/MySqlTuner Test Cases.csproj
@@ -40,6 +40,7 @@
     <CodeAnalysisRuleSet>
     </CodeAnalysisRuleSet>
     <RunCodeAnalysis>true</RunCodeAnalysis>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>bin\Release\</OutputPath>
@@ -100,7 +101,6 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Class Diagram.cd" />
     <None Include="MySqlTuner.Test.snk" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
