--- a/MySQLTuner/MySqlTuner.csproj
+++ b/MySQLTuner/MySqlTuner.csproj
@@ -46,6 +46,7 @@
     <DocumentationFile>bin\Debug\MySqlTuner.xml</DocumentationFile>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <RunCodeAnalysis>true</RunCodeAnalysis>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -127,7 +128,6 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Class Diagram.cd" />
     <None Include="MySqlTuner.snk" />
     <EmbeddedResource Include="Resources\App.manifest">
       <SubType>Designer</SubType>
