--- a/MySQLTuner .Net 2.0/MySqlTuner .Net 2.0.csproj
+++ b/MySQLTuner .Net 2.0/MySqlTuner .Net 2.0.csproj
@@ -123,6 +123,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\MySQLTuner\DataGridViewImageWithAltTextCell.cs">
+      <Link>DataGridViewImageWithAltTextCell.cs</Link>
+    </Compile>
     <Compile Include="..\MySQLTuner\FormLogOn.cs">
       <Link>FormLogOn.cs</Link>
       <SubType>Form</SubType>
