Upgraded to Visual Studio 2019

--- a/MySQLTuner .Net 2.0 MySQL 4.0/MySqlTuner .Net 2.0 MySQL 4.0.csproj
+++ b/MySQLTuner .Net 2.0 MySQL 4.0/MySqlTuner .Net 2.0 MySQL 4.0.csproj
@@ -47,8 +47,9 @@
     <DocumentationFile>bin\Debug\MySqlTuner.xml</DocumentationFile>
     <CodeAnalysisRuleSet>
     </CodeAnalysisRuleSet>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
     <LangVersion>default</LangVersion>
+    <CodeAnalysisIgnoreGeneratedCode>false</CodeAnalysisIgnoreGeneratedCode>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
