Updated FxCop and StyleCop. Fixed new warnings.

--- a/MySqlTuner Test Cases/packages.config
+++ b/MySqlTuner Test Cases/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.1" targetFramework="net40" />
-  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.1" targetFramework="net40" />
-  <package id="Microsoft.CodeQuality.Analyzers" version="2.9.1" targetFramework="net40" />
-  <package id="Microsoft.NetCore.Analyzers" version="2.9.1" targetFramework="net40" />
-  <package id="Microsoft.NetFramework.Analyzers" version="2.9.1" targetFramework="net40" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.8" targetFramework="net40" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.8" targetFramework="net40" developmentDependency="true" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="2.9.8" targetFramework="net40" developmentDependency="true" />
+  <package id="Microsoft.NetCore.Analyzers" version="2.9.8" targetFramework="net40" developmentDependency="true" />
+  <package id="Microsoft.NetFramework.Analyzers" version="2.9.8" targetFramework="net40" developmentDependency="true" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net40" />
-  <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net40" developmentDependency="true" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net40" developmentDependency="true" />
 </packages>
