--- a/MySqlTuner Test Cases/packages.config
+++ b/MySqlTuner Test Cases/packages.config
@@ -1,10 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.8" targetFramework="net40" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.8" targetFramework="net40" developmentDependency="true" />
-  <package id="Microsoft.CodeQuality.Analyzers" version="2.9.8" targetFramework="net40" developmentDependency="true" />
-  <package id="Microsoft.NetCore.Analyzers" version="2.9.8" targetFramework="net40" developmentDependency="true" />
-  <package id="Microsoft.NetFramework.Analyzers" version="2.9.8" targetFramework="net40" developmentDependency="true" />
-  <package id="MySql.Data" version="6.9.9" targetFramework="net40" />
-  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net40" developmentDependency="true" />
+  <package id="BouncyCastle" version="1.8.9" targetFramework="net48" />
+  <package id="Google.Protobuf" version="3.20.0" targetFramework="net48" />
+  <package id="K4os.Compression.LZ4" version="1.2.16" targetFramework="net48" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.2.16" targetFramework="net48" />
+  <package id="K4os.Hash.xxHash" version="1.0.7" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.NetAnalyzers" version="6.0.0" targetFramework="net40" developmentDependency="true" />
+  <package id="MySql.Data" version="8.0.28" targetFramework="net48" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net48" developmentDependency="true" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
 </packages>
