--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -66,5 +66,8 @@ jobs:
     #   make bootstrap
     #   make release
 
+    - run: |
+       dotnet build
+
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
